--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,84 @@
-.container {
-    position: relative;
-    width: 100%;
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+*, *::before, *::after {
+    box-sizing: border-box;
 }
 
-.center {
-    margin: auto;
-    width: 60%;
+body {
+    margin: 30px;
+    background-color: #f0f0f0;
+}
+
+.container, .backdrop, textarea {
+    width: 600px;
+    height: 600px;
+}
+
+.highlights, textarea {
+    padding: 10px;
+    font: 20px/28px 'Open Sans', sans-serif;
+    letter-spacing: 1px;
+}
+
+.container {
+    display: block;
+    margin: 0 auto;
+    transform: translateZ(0);
+    -webkit-text-size-adjust: none;
+}
+
+.backdrop {
+    position: absolute;
+    z-index: 1;
+    border: 2px solid #685972;
+    background-color: #fff;
+    overflow: auto;
+    pointer-events: none;
+    transition: transform 1s;
+}
+
+.highlights {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    color: transparent;
 }
 
 textarea {
+    display: block;
+    position: absolute;
+    z-index: 2;
+    margin: 0;
+    border: 2px solid #74637f;
+    border-radius: 0;
+    color: #444;
+    background-color: transparent;
+    overflow: auto;
+    resize: none;
+    transition: transform 1s;
+}
 
-    width: 50em; /* the inital width of the textarea */
-    height: 40em; /* the inital height of the textarea */
+mark {
+    border-radius: 3px;
+    color: transparent;
+    background-color: #b1d5e5;
+}
 
-    border: 0.1em solid #ccc;
-    border-radius: 0.5em;
+button {
+    display: block;
+    width: 300px;
+    margin: 30px auto 0;
+    padding: 10px;
+    border: none;
+    border-radius: 6px;
+    color: #fff;
+    background-color: #74637f;
+    font: 18px 'Opens Sans', sans-serif;
+    letter-spacing: 1px;
+    appearance: none;
+    cursor: pointer;
+}
 
-    background-color: #ffffe6;
-
+textarea:focus, button:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px #c6aada;
 }
