--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,12 @@ body {
     letter-spacing: 1px;
 }
 
+.center {
+    margin: auto;
+    text-align: center ;
+    width: 50%;
+}
+
 .container {
     display: block;
     margin: 0 auto;
